resources/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-rest-api
  namespace: default
  labels:
    app: go-rest-api
spec:
  selector:
    matchLabels:
      app: go-rest-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      name: go-rest-api
      namespace: default
      labels:
        app: go-rest-api
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1001
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: go-rest-api
          image: IMAGE_URL
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: "/healthy"
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/healthy"
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
