resources/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-api
  namespace: default
spec:
  selector:
    app: go-rest-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: go-rest-api
