resources/kubernetes/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-api
  namespace: golang-api
  labels:
    app: golang-api
  annotations:
    nginx.org/client-max-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: golang-api.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang-api
                port:
                  number: 80
